Adding validate and login endpoints
