# src/main/resources/openapi.yaml
@@ -1063,6 +1063,44 @@ paths:
         - Public
       summary: get token with username/password
 
+  /public/validate:
+    get:
+      operationId: validateToken
+      description: validate a token
+      parameters:
+        - description: authorization
+          explode: false
+          in: header
+          name: authorization
+          required: true
+          schema:
+            type: string
+          style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ObjectNode'
+          description: OK
+          headers:
+            Cache-Control:
+              description: "Cache-Control header provides important info on how long a response may be considered fresh"
+              schema:
+                type: string
+              example: "Cache-Control: max-age=3600, public, must-revalidate"
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+      tags:
+        - Public
+      summary: validate a token and send back its claims
+
 components:
   schemas:
     UserLoad:
